Moved LCR stuff to own project
Moved LCR stuff to own project

--- a/ConsoleApp1/LCRServer.csproj
+++ b/ConsoleApp1/LCRServer.csproj
@@ -33,6 +33,9 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="LCRLibrary">
+      <HintPath>..\..\LCRLibrary\LCRLibrary\bin\Debug\LCRLibrary.dll</HintPath>
+    </Reference>
     <Reference Include="LiteNetLib, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
       <HintPath>..\packages\LiteNetLib.0.8.2-beta\lib\net35\LiteNetLib.dll</HintPath>
     </Reference>
